# aster

./: .gitignore  500k_scale_report.html  CLAUDE.md  Cargo.toml  README.md  askama.toml
benches/: comprehensive_benchmark.rs
docs/: README.md  adaptive-updates.md  api-reference.md  architecture.md  benchmarking.md  performance.md  storage-engine.md
examples/: benchmark_runner.rs  recommendation_engine.rs  simple_server.rs
examples/twitter/: database.rs  handlers.rs  main.rs  models.rs  seeder.rs
examples/twitter/templates/: home.html  layout.html  login.html  post.html  profile.html
src/: error.rs  lib.rs  metrics.rs  query.rs  recovery.rs  transaction.rs  types.rs  validation.rs
src/benchmarks/: benchmark_suite.rs  metrics.rs  mod.rs  reporters.rs  workloads.rs
src/graph/: edge.rs  mod.rs  traversal.rs  vertex.rs
src/query/: engine.rs  gremlin.rs  mod.rs  optimizer.rs
src/server/: mod.rs
src/storage/: adaptive_updates.rs  block_cache.rs  compaction.rs  lsm_tree.rs  memtable.rs  mod.rs  poly_lsm.rs  property_store.rs  sstable.rs  storage_manager.rs
src/utils/: bloom_filter.rs  elias_fano.rs  encoding.rs  fast_serialization.rs  mod.rs  morris_counter.rs
tests/: benchmark_suite_integration_test.rs  concurrent_workload_stress_integration_test.rs  edge_registry_and_graph_schema_integration_test.rs  gremlin_integration_test.rs  integration_tests.rs  metrics_integration_test.rs  mvcc_integration_test.rs  property_analytics_test.rs  property_integration_test.rs  query_optimizer_integration_test.rs  recommendation_engine_test.rs  recovery_integration_test.rs  server_test.rs  social_network_test.rs  storage_engine_integration_test.rs  twitter_comprehensive_test.rs  validation_system_integration_test.rs
